fixing color code is not showing in code editor

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -2,7 +2,7 @@
 
 *{
     font-family: 'Montserrat', sans-serif;
-    color: white !important;
+    color: white ;
 }
 
 :root {
